@@ -124,10 +124,13 @@ class BuildoutMaker(interfaces.IMaker):
             if isinstance(parts, str):
                 parts = parts.split()
 
+            minibuild = opts.get('minibuild', None)
+            category = ''
+            if minibuild: category = minibuild.category
             # Try to upgrade only if we need to
             # (we chech only when we have a .installed.cfg file
             if not opts.get('upgrade', True)\
-               and os.path.exists(installed_cfg):
+               and os.path.exists(installed_cfg) and (not category=='eggs'):
                 self.logger.info('Buildout will not run in %s'
                                   ' as there is a .installed.cfg file'
                                   ' indicating us that the software is already'
